<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/logo_margin_top"
                        android:contentDescription="@string/imagem_logo"
                        android:src="@drawable/logo_nutrisolver_reduzido" />

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_login_com_google"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="50dp" />

                        <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/btn_login_com_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="53dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="53dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            facebook:com_facebook_login_text="@string/fazer_login_com_facebook"
                            facebook:com_facebook_logout_text="@string/sair" />

                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:text="@string/ou" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginEnd="20dp"
                            android:hint="@string/senha">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/login_input_senha"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="50dp"
                        android:background="@android:color/transparent"
                        android:gravity="bottom">

                        <Button
                            android:id="@+id/btn_login_com_senha"
                            style="@style/botao_confirmar"
                            android:layout_width="match_parent"
                            android:layout_marginBottom="8dp"
                            android:text="@string/login" />

                        <TextView
                            android:id="@+id/btn_registrar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btn_login_com_senha"
                            android:layout_alignStart="@id/btn_login_com_senha"
                            android:layout_marginBottom="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/registrar" />

                        <TextView
                            android:id="@+id/btn_recuperar_senha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btn_login_com_senha"
                            android:layout_alignEnd="@id/btn_login_com_senha"
                            android:layout_marginBottom="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/recuperar_senha" />

                    </RelativeLayout>

                    </LinearLayout>
            </ScrollView>

    <ProgressBar
        style="@style/my_progress_bar"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>

</FrameLayout>