<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.Register">


            <ScrollView
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/logo_margin_top"
                        android:contentDescription="@string/imagem_logo"
                        android:src="@drawable/logo_nutrisolver_reduzido" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="username"
                            android:inputType="textEmailAddress"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/senha">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_input_senha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="password"
                            android:inputType="textPassword"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/repita_a_senha">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_input_senha_repetir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="password"
                            android:inputType="textPassword"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="bottom">
                        <Button
                            android:id="@+id/btn_registrar"
                            style="@style/botao_confirmar"
                            android:layout_width="match_parent"
                            android:layout_marginStart="50dp"
                            android:layout_marginEnd="50dp"
                            android:onClick="registrar"
                            android:text="@string/Registrar" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>



    <ProgressBar
        style="@style/my_progress_bar"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>

</FrameLayout>